Correção nome do titulo da página

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,6 +1,6 @@
 <html> 
 <head>
-    <title>VerCarros - O lugar ideal para encontrar seu próximo carro</title>
+    <title>MeuCarro - O lugar ideal para encontrar seu próximo carro</title>
     <div class="topnav">
             <div><b>MeuCarro</b></div> 
             <a style="margin-left:95%; margin-top:-25px">Login</a>
